# drive-markov-chain

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: deploy.yml
frontend/: .prettierignore  package-lock.json  package.json
frontend/src/lib/: helpers.ts  index.ts
frontend/src/lib/components/: DataBox.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
modelling/: compute_end_states.py  helpers.py  merge_years.py  pyproject.toml  scrape_pbp.py
