[project]
name = "modelling"
version = "0.1.0"
description = ""
authors = [
    {name = "pulkitahuja0",email = "140126488+pulkitahuja0@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nflreadpy (>=0.1.4,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false